---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/function_used_in_assigment.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(0)"}
var y = 7;
wait;
# {"SymbolId(1)"}
var x = 
        foo() # {"FunctionId(1)"}
        ;
wait;
# {"SymbolId(1)"}
x = 121;
wait;

# {"FunctionId(1)"}
fn foo() -> (int,) {
    wait;
    return (33,);
}
